--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "spmiFrontend",
+  "name": "spmiFrontEnd",
   "version": "0.0.0",
   "dependencies": {
     "angular-animate": "~1.4.2",
