--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,7 @@
     "angular-chart.js": "~0.8.5",
     "ng-file-upload": "~9.1.1",
     "satellizer": "~0.12.5",
-    "angular-pdf": "~1.2.1",
-    "pdfjs-bower": "~1.0.233"
+    "angular-pdf": "~1.2.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
