--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "satellizer": "~0.12.5",
     "angular-pdf": "~1.2.1",
     "angular-moment": "~0.10.3",
-    "ngprogress": "~1.1.2"
+    "ngprogress": "~1.1.2",
+    "json-formatter": "~0.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
