Clear, Export and pagination for document

--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "angular-moment": "~0.10.3",
     "ngprogress": "~1.1.2",
     "json-formatter": "~0.4.1",
-    "ui-select": "angular-ui-select#~0.14.9"
+    "ui-select": "angular-ui-select#~0.14.9",
+    "ng-multi-transclude": "~0.1.5"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.2"
